# bunny-party

./: .gitignore  LICENSE  README.md  demonstration.ipynb  pyproject.toml
.dvc/: config
bunny_server/: dvc.py  embedding.py  model.py  server.py
data/: .gitignore  class_name_to_id_mapping.txt.dvc  test.dvc  train.dvc
demo_preparation/: README.md  prepare_dataset.py
demo_preparation/data/: .gitignore
server/: dataset.py  embedding.py  model.py  server.py
tests/: test_dataset.py  test_dvc.py  test_embedding.py  test_model.py
